test(android): read persistent diagnostics using supported platform APIs